--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
         </div>
         <div class="nav-links">
           <a href="#features">Features</a>
-          <a href="#screenshots">Screenshots</a>
           <a href="#pricing">Pricing</a>
           <a href="#faq">FAQ</a>
           <button class="theme-toggle" id="theme-toggle">
@@ -45,12 +44,15 @@
         <div class="hero-content">
           <h1>Feather Wand</h1>
           <div class="tagline">
-            <span class="tagline-text">The next</span>
-            <div class="typing-container">
-              <span id="typing-text" style="min-width: 95px">Cop</span
-              ><span class="cursor">|</span>
+            <div class="tagline-row">
+              <span class="tagline-text">The next</span>
+              <div class="typing-container">
+                <span id="typing-text">Cop</span><span class="cursor">|</span>
+              </div>
             </div>
-            <span class="tagline-text">for JMeter</span>
+            <div class="tagline-row">
+              <span class="tagline-text">for JMeter</span>
+            </div>
           </div>
           <p class="hero-description">
             Elevate your scripting experience with the most intuitive AI
@@ -119,45 +121,45 @@
         <div class="testimonial-card">
           <div class="testimonial-content">
             <p>
-              "Feather Wand has completely transformed my coding workflow. I
-              can't imagine going back."
+              "Feather Wand is so intelligent, it finished my JMeter scripts
+              before I even knew what I was testing. Now I have more time to
+              tweet about AI taking over the world."
             </p>
           </div>
           <div class="testimonial-author">
-            <img src="images/avatar-1.jpg" alt="Developer Avatar" />
             <div>
-              <h4>Alex Johnson</h4>
-              <p>Senior Developer at TechCorp</p>
+              <h4>Elon Musk</h4>
+              <p>CEO of Tesla, SpaceX, & Twitter</p>
             </div>
           </div>
         </div>
         <div class="testimonial-card">
           <div class="testimonial-content">
             <p>
-              "The AI suggestions are uncannily accurate. It's like having a
-              senior developer looking over your shoulder."
+              "I've seen the future of performance testing, and it's Feather
+              Wand. It's like having a tiny Claude in your JMeter that actually
+              understands what you're trying to do. Magical!"
             </p>
           </div>
           <div class="testimonial-author">
-            <img src="images/avatar-2.jpg" alt="Developer Avatar" />
             <div>
-              <h4>Samantha Lee</h4>
-              <p>Full Stack Engineer</p>
+              <h4>Dario Amodei</h4>
+              <p>CEO of Claude</p>
             </div>
           </div>
         </div>
         <div class="testimonial-card">
           <div class="testimonial-content">
             <p>
-              "I've tried every AI coding assistant out there. Feather Wand is
-              in a league of its own."
+              "Feather Wand is the most elegant solution for JMeter I've seen.
+              It's so intuitive that even my product managers can use it. And
+              that's saying something!"
             </p>
           </div>
           <div class="testimonial-author">
-            <img src="images/avatar-3.jpg" alt="Developer Avatar" />
             <div>
-              <h4>Michael Chen</h4>
-              <p>Open Source Contributor</p>
+              <h4>Sundar Pichai</h4>
+              <p>CEO of Google & Alphabet</p>
             </div>
           </div>
         </div>
@@ -187,28 +189,24 @@
       <div class="faq-grid">
         <div class="faq-item">
           <div class="faq-question">
-            <h3>How does Feather Wand differ from other AI assistants?</h3>
+            <h3>How Feather Wand helps performance engineers?</h3>
             <span class="faq-toggle"><i class="fas fa-plus"></i></span>
           </div>
           <div class="faq-answer">
             <p>
-              Feather Wand uses a proprietary AI model specifically trained on
-              high-quality code repositories, making its suggestions more
-              accurate and contextually relevant than general-purpose AI tools.
+              Feather Wand helps performance engineers by providing a way to
+              generate JMeter scripts with ease. It uses Claude API to generate
+              the scripts and elements.
             </p>
           </div>
         </div>
         <div class="faq-item">
           <div class="faq-question">
-            <h3>Is my code secure when using Feather Wand?</h3>
+            <h3>Can I customize the prompts?</h3>
             <span class="faq-toggle"><i class="fas fa-plus"></i></span>
           </div>
           <div class="faq-answer">
-            <p>
-              Absolutely. Feather Wand processes your code locally by default,
-              ensuring your intellectual property never leaves your machine.
-              Enterprise plans also offer additional security features.
-            </p>
+            <p>Yes, you can customize the prompts to your needs.</p>
           </div>
         </div>
         <div class="faq-item">
@@ -218,10 +216,8 @@
           </div>
           <div class="faq-answer">
             <p>
-              Feather Wand supports all major programming languages including
-              JavaScript, Python, Java, C++, Go, Rust, and many more. We
-              regularly add support for new languages based on community
-              feedback.
+              Feather Wand supports Java and Groovy primarily. But it can be
+              customized using the prompts.
             </p>
           </div>
         </div>
@@ -231,10 +227,18 @@
             <span class="faq-toggle"><i class="fas fa-plus"></i></span>
           </div>
           <div class="faq-answer">
+            <p>No, it requires an internet connection to use the Claude API.</p>
+          </div>
+        </div>
+        <div class="faq-item">
+          <div class="faq-question">
+            <h3>How much it actually costs?</h3>
+            <span class="faq-toggle"><i class="fas fa-plus"></i></span>
+          </div>
+          <div class="faq-answer">
             <p>
-              Yes, Pro and Enterprise plans include offline mode with local
-              model processing. The Free plan requires an internet connection
-              for API access.
+              It's free to use. You just need to provide your own Claude API
+              key. The cost of the API is covered by you based on your usage.
             </p>
           </div>
         </div>
@@ -263,39 +267,46 @@
             <h4>Product</h4>
             <a href="#features">Features</a>
             <a href="#pricing">Pricing</a>
-            <a href="#download">Download</a>
+            <a
+              href="https://github.com/QAInsights/jmeter-ai/releases"
+              target="_blank"
+              >Download</a
+            >
             <a href="#updates">Updates</a>
           </div>
           <div class="footer-column">
-            <h4>Company</h4>
-            <a href="#about">About Us</a>
-            <a href="#careers">Careers</a>
-            <a href="#contact">Contact</a>
-            <a href="#blog">Blog</a>
+            <h4>QAInsights</h4>
+            <a href="https://www.perfgpt.ai/" target="_blank">PerfGPT</a>
+            <a href="https://www.qainsights.com/" target="_blank">Blog</a>
           </div>
           <div class="footer-column">
             <h4>Resources</h4>
-            <a href="#documentation">Documentation</a>
-            <a href="#tutorials">Tutorials</a>
-            <a href="#api">API</a>
-            <a href="#community">Community</a>
-          </div>
-          <div class="footer-column">
-            <h4>Legal</h4>
-            <a href="#terms">Terms</a>
-            <a href="#privacy">Privacy</a>
-            <a href="#cookies">Cookies</a>
-            <a href="#licenses">Licenses</a>
+            <a href="https://www.youtube.com/@qainsights" target="_blank"
+              >Tutorials</a
+            >
+            <a href="https://community.qainsights.com" target="_blank"
+              >Community</a
+            >
           </div>
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2025 Feather Wand. All rights reserved.</p>
+        <p>
+          &copy; <span id="current-year"></span> Feather Wand. All rights
+          reserved.
+        </p>
         <div class="social-links">
-          <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-          <a href="#" aria-label="GitHub"><i class="fab fa-github"></i></a>
-          <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-          <a href="#" aria-label="Discord"><i class="fab fa-discord"></i></a>
+          <a href="https://x.com/qainsights" aria-label="X"
+            ><i class="fab fa-x"></i
+          ></a>
+          <a href="https://github.com/QAInsights/jmeter-ai" aria-label="GitHub"
+            ><i class="fab fa-github"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/naveenkumarn"
+            aria-label="LinkedIn"
+            ><i class="fab fa-linkedin"></i
+          ></a>
         </div>
       </div>
     </footer>
