Add comprehensive SEO and social media meta tags for improved discoverability

--- a/index.html
+++ b/index.html
@@ -4,6 +4,69 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Feather Wand - The next Cursor, but for JMeter</title>
+
+    <!-- Primary Meta Tags -->
+    <meta
+      name="title"
+      content="Feather Wand - The next Cursor, but for JMeter"
+    />
+    <meta
+      name="description"
+      content="Elevate your JMeter scripting experience with Feather Wand, the most intuitive AI assistant for performance testing. Generate scripts with ease using Claude API."
+    />
+    <meta
+      name="keywords"
+      content="JMeter, AI assistant, performance testing, load testing, Claude API, test automation, Feather Wand"
+    />
+    <meta name="author" content="QAInsights" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://featherwand.qainsights.com/" />
+    <meta
+      property="og:title"
+      content="Feather Wand - The next Cursor, but for JMeter"
+    />
+    <meta
+      property="og:description"
+      content="Elevate your JMeter scripting experience with Feather Wand, the most intuitive AI assistant for performance testing."
+    />
+    <meta
+      property="og:image"
+      content="https://featherwand.qainsights.com/images/feather-wand-og.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://featherwand.qainsights.com/"
+    />
+    <meta
+      property="twitter:title"
+      content="Feather Wand - The next Cursor, but for JMeter"
+    />
+    <meta
+      property="twitter:description"
+      content="Elevate your JMeter scripting experience with Feather Wand, the most intuitive AI assistant for performance testing."
+    />
+    <meta
+      property="twitter:image"
+      content="https://featherwand.qainsights.com/images/feather-wand-og.png"
+    />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="images/feather-wand-logo.svg" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="images/apple-touch-icon.png"
+    />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://featherwand.qainsights.com/" />
+
     <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
