Update testimonial heading and footer links with new project references

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     </section>
 
     <section id="testimonials" class="testimonials">
-      <h2>What Developers Are Saying</h2>
+      <h2>Whimsical Words from the Tech Elite</h2>
       <div class="testimonial-grid">
         <div class="testimonial-card">
           <div class="testimonial-content">
@@ -339,7 +339,10 @@
           </div>
           <div class="footer-column">
             <h4>QAInsights</h4>
-            <a href="https://www.perfgpt.ai/" target="_blank">PerfGPT</a>
+            <a href="https://www.perftractor.xyz/" target="_blank"
+              >PerfTractor</a
+            >
+            <a href="https://kel.qainsights.com" target="_blank">Kel</a>
             <a href="https://www.qainsights.com/" target="_blank">Blog</a>
           </div>
           <div class="footer-column">
