Update meta tags and content for improved clarity and accuracy

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     />
     <meta
       name="description"
-      content="Elevate your JMeter scripting experience with Feather Wand, the most intuitive AI assistant for performance testing. Generate scripts with ease using Claude API."
+      content="Elevate your JMeter scripting experience with Feather Wand, the most intuitive AI assistant for performance testing. Generate scripts with ease using Claude/OpenAI API."
     />
     <meta
       name="keywords"
-      content="JMeter, AI assistant, performance testing, load testing, Claude API, test automation, Feather Wand"
+      content="JMeter, AI assistant, AI agent, load testing, cursor, windsurf, cline, performance testing, load testing, Claude API, OpenAI API, test automation, Feather Wand"
     />
     <meta name="author" content="QAInsights" />
     <meta name="robots" content="index, follow" />
@@ -34,7 +34,7 @@
     />
     <meta
       property="og:image"
-      content="https://featherwand.qainsights.com/images/feather-wand-og.png"
+      content="https://raw.githubusercontent.com/QAInsights/jmeter-ai/refs/heads/main/images/Feather-Wand-AI-Agent-JMeter.png"
     />
 
     <!-- Twitter -->
@@ -139,7 +139,7 @@
       </div>
       <div class="hero-right">
         <div class="hero-image">
-          <img src="images/hero-placeholder.png" alt="Feather Wand in action" />
+          <img src="https://raw.githubusercontent.com/QAInsights/jmeter-ai/refs/heads/main/images/Feather-Wand-AI-Agent-JMeter.png" alt="Feather Wand in action" />
         </div>
       </div>
     </section>
@@ -152,7 +152,7 @@
             <i class="fas fa-bolt"></i>
           </div>
           <h3>Lightning Fast</h3>
-          <p>Experience Claude's speed.</p>
+          <p>Experience speed.</p>
         </div>
         <div class="feature-card">
           <div class="feature-icon">
@@ -200,7 +200,7 @@
           <div class="testimonial-content">
             <p>
               "I've seen the future of performance testing, and it's Feather
-              Wand. It's like having a tiny Claude in your JMeter that actually
+              Wand. It's like having a tiny AI in your JMeter that actually
               understands what you're trying to do. Magical!"
             </p>
           </div>
@@ -238,7 +238,7 @@
             <p class="price">$0<span>/month</span></p>
           </div>
           <ul class="pricing-features">
-            <li><i class="fas fa-check"></i> BYOK Claude API Key</li>
+            <li><i class="fas fa-check"></i> BYOK Claude/OpenAI API Key</li>
             <li><i class="fas fa-check"></i> Multi-turn conversation</li>
             <li><i class="fas fa-check"></i> Customizable prompts</li>
             <li><i class="fas fa-check"></i> Community support</li>
@@ -258,7 +258,7 @@
           <div class="faq-answer">
             <p>
               Feather Wand helps performance engineers by providing a way to
-              generate JMeter scripts with ease. It uses Claude API to generate
+              generate JMeter scripts with ease. It uses Claude/OpenAI API to generate
               the scripts and elements.
             </p>
           </div>
@@ -290,7 +290,7 @@
             <span class="faq-toggle"><i class="fas fa-plus"></i></span>
           </div>
           <div class="faq-answer">
-            <p>No, it requires an internet connection to use the Claude API.</p>
+            <p>No, it requires an internet connection to use the API.</p>
           </div>
         </div>
         <div class="faq-item">
@@ -300,7 +300,7 @@
           </div>
           <div class="faq-answer">
             <p>
-              It's free to use. You just need to provide your own Claude API
+              It's free to use. You just need to provide your own Claude/OpenAI API
               key. The cost of the API is covered by you based on your usage.
             </p>
           </div>
