Update references from Claude to Anthropic in meta tags and content

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     />
     <meta
       name="description"
-      content="Elevate your JMeter scripting experience with Feather Wand, the most intuitive AI assistant for performance testing. Generate scripts with ease using Claude/OpenAI API."
+      content="Elevate your JMeter scripting experience with Feather Wand, the most intuitive AI assistant for performance testing. Generate scripts with ease using Anthropic/OpenAI API."
     />
     <meta
       name="keywords"
-      content="JMeter, AI assistant, AI agent, load testing, cursor, windsurf, cline, performance testing, load testing, Claude API, OpenAI API, test automation, Feather Wand"
+      content="JMeter, AI assistant, AI agent, load testing, cursor, windsurf, cline, performance testing, load testing, Anthropic API, OpenAI API, test automation, Feather Wand"
     />
     <meta name="author" content="QAInsights" />
     <meta name="robots" content="index, follow" />
@@ -207,7 +207,7 @@
           <div class="testimonial-author">
             <div>
               <h4>Dario Amodei</h4>
-              <p>CEO of Claude</p>
+              <p>CEO of Anthropic</p>
             </div>
           </div>
         </div>
@@ -238,7 +238,7 @@
             <p class="price">$0<span>/month</span></p>
           </div>
           <ul class="pricing-features">
-            <li><i class="fas fa-check"></i> BYOK Claude/OpenAI API Key</li>
+            <li><i class="fas fa-check"></i> BYOK Anthropic/OpenAI API Key</li>
             <li><i class="fas fa-check"></i> Multi-turn conversation</li>
             <li><i class="fas fa-check"></i> Customizable prompts</li>
             <li><i class="fas fa-check"></i> Community support</li>
@@ -258,7 +258,7 @@
           <div class="faq-answer">
             <p>
               Feather Wand helps performance engineers by providing a way to
-              generate JMeter scripts with ease. It uses Claude/OpenAI API to generate
+              generate JMeter scripts with ease. It uses Anthropic/OpenAI API to generate
               the scripts and elements.
             </p>
           </div>
@@ -300,7 +300,7 @@
           </div>
           <div class="faq-answer">
             <p>
-              It's free to use. You just need to provide your own Claude/OpenAI API
+              It's free to use. You just need to provide your own Anthropic/OpenAI API
               key. The cost of the API is covered by you based on your usage.
             </p>
           </div>
