Add dropdown menu for MCP links in navigation

--- a/index.html
+++ b/index.html
@@ -94,6 +94,14 @@
           <a href="#features">Features</a>
           <a href="#pricing">Pricing</a>
           <a href="#faq">FAQ</a>
+          <div class="dropdown">
+            <a href="#" class="dropdown-toggle">MCP <i class="fas fa-caret-down"></i></a>
+            <div class="dropdown-menu">
+              <a href="https://github.com/QAInsights/jmeter-mcp-server" target="_blank">JMeter MCP</a>
+              <a href="https://github.com/QAInsights/k6-mcp-server" target="_blank">k6 MCP</a>
+              <a href="https://github.com/QAInsights/locust-mcp-server" target="_blank">Locust MCP</a>
+            </div>
+          </div>
           <button class="theme-toggle" id="theme-toggle">
             <i class="fas fa-moon"></i>
             <i class="fas fa-sun"></i>
