Add tooltip styles and Feather Wand Agent link with Google Agent Kit info

--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
               <a href="https://github.com/QAInsights/jmeter-mcp-server" target="_blank">JMeter MCP</a>
               <a href="https://github.com/QAInsights/k6-mcp-server" target="_blank">k6 MCP</a>
               <a href="https://github.com/QAInsights/locust-mcp-server" target="_blank">Locust MCP</a>
+              <a href="https://github.com/QAInsights/feather_wand_agent" target="_blank" class="agent-link" data-tooltip="Powered by Google Agent Kit. Supports JMeter, k6, Gatling, and Locust.">
+                Feather Wand Agent
+              </a>
             </div>
           </div>
           <button class="theme-toggle" id="theme-toggle">
